--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-# Streamlit web app
-streamlit==1.30.0
-
-# Machine Learning / Deep Learning
+streamlit==1.38.0
 tensorflow==2.15.0
-keras==2.15.0
-numpy==1.26.0
-
-# Text preprocessing
-nltk==3.8.1
-
-# Optional (safe to include)
-pandas==2.2.2
+numpy
+nltk
+pickle-mixin
